--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -73,25 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n"
+      "1 1\n",
+      "1 1\n",
+      "2 2\n",
+      "2 2\n",
+      "2 2\n",
+      "2 2\n",
+      "3 3\n",
+      "4 4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array(['BIG ROOM', 'BASS HOUSE'], dtype='<U10')"
+       "array(['BIG ROOM', 'BASS HOUSE', 'DEEP HOUSE', 'BIG ROOM'], dtype='<U10')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +118,7 @@
        "[0, 0, 0]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
