--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load The library"
+    "#Load The library, Make sure the library and the script in same folder"
    ]
   },
   {
