--- a/sample_script/Untitled.ipynb
+++ b/sample_script/Untitled.ipynb
@@ -11,16 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"..\") # Adds higher directory to python modules path.\n",
+    "\n",
     "import mss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,26 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../Thesis/Dataset/tesuto\n",
-      "[1, 3, 3, 3]\n",
-      "['../Thesis/Dataset/tesuto/KEVU x SaberZ - Dream Team (Extended Mix) [www.slider.kz].mp3', '../Thesis/Dataset/tesuto/13355827_Like_This_Club_Mix.mp3', '../Thesis/Dataset/tesuto/13587149_Click_Original_Mix.mp3', '../Thesis/Dataset/tesuto/21. Guru Josh Projekt vs Blinders and more -.mp3']\n",
-      "(0, 1)\n",
+      "../../Thesis/Dataset/tesuto\n",
+      "missing KEVU x SaberZ - Dream Team (Extended Mix) [www.slider.kz].mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/akriptonn/anaconda3/envs/aidj/lib/python3.8/site-packages/librosa/core/audio.py:162: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  warnings.warn(\"PySoundFile failed. Trying audioread instead.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "(65, 13)\n",
+      "[3, 3, 3, 1]\n",
+      "['../../Thesis/Dataset/tesuto/13355827_Like_This_Club_Mix.mp3', '../../Thesis/Dataset/tesuto/13587149_Click_Original_Mix.mp3', '../../Thesis/Dataset/tesuto/21. Guru Josh Projekt vs Blinders and more -.mp3', '../../Thesis/Dataset/tesuto/KEVU x SaberZ - Dream Team (Extended Mix) [www.slider.kz].mp3']\n",
+      "(0, 3)\n",
       "(1, 3)\n",
       "(2, 3)\n",
-      "(3, 3)\n",
-      "['../Thesis/Dataset/tesuto/KEVU x SaberZ - Dream Team (Extended Mix) [www.slider.kz].mp3', '../Thesis/Dataset/tesuto/13355827_Like_This_Club_Mix.mp3', '../Thesis/Dataset/tesuto/13587149_Click_Original_Mix.mp3', '../Thesis/Dataset/tesuto/21. Guru Josh Projekt vs Blinders and more -.mp3']\n"
+      "(3, 1)\n",
+      "['../../Thesis/Dataset/tesuto/KEVU x SaberZ - Dream Team (Extended Mix) [www.slider.kz].mp3', '../../Thesis/Dataset/tesuto/13355827_Like_This_Club_Mix.mp3', '../../Thesis/Dataset/tesuto/13587149_Click_Original_Mix.mp3', '../../Thesis/Dataset/tesuto/21. Guru Josh Projekt vs Blinders and more -.mp3']\n"
      ]
     }
    ],
    "source": [
-    "ms = mss.MusicSelectionSystem('config/mss.json','../Thesis/Dataset/tesuto')"
+    "ms = mss.MusicSelectionSystem('../config/mss.json','../../Thesis/Dataset/tesuto')"
    ]
   },
   {
