--- a/deprecated/scripts/EnergyCLS.ipynb
+++ b/deprecated/scripts/EnergyCLS.ipynb
@@ -18792,13 +18792,7 @@
       "5802\n",
       "(65, 13)\n",
       "Processing ../raw_dataset/files\\FUTURE HOUSE\\Hugeloud _ Martin Fritzon - NYC [www.slider..mp3, segment:2\n",
-      "5803\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "5803\n",
       "(65, 13)\n",
       "Processing ../raw_dataset/files\\FUTURE HOUSE\\Hugeloud _ Martin Fritzon - NYC [www.slider..mp3, segment:3\n",
       "5804\n",
@@ -21887,15 +21881,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.47\n",
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ffmpeg\n",
+    "from moviepy.editor import VideoFileClip\n",
+    "\n",
+    "video_filename = 'C:/Users/KRPTN/Pictures/Camera Roll/WIN_20210330_17_01_17_Pro.mp4'\n",
+    "\n",
+    "def with_moviepy(filename):\n",
+    "    clip = VideoFileClip(filename)\n",
+    "    duration       = clip.duration\n",
+    "    fps            = clip.fps\n",
+    "    return duration, fps\n",
+    "\n",
+    "duration, fps = with_moviepy(video_filename)\n",
+    "\n",
+    "length = duration * fps\n",
+    "interval_sec = 10\n",
+    "start_timestamp = 0 \n",
+    "end_timestamp = fps * interval_sec\n",
+    "\n",
+    "print(duration)\n",
+    "print(fps)\n",
+    "\n",
+    "for i in range(int(length/(fps*interval_sec))):\n",
+    "    (\n",
+    "        ffmpeg\n",
+    "        .input(video_filename)\n",
+    "        .trim   (start_frame=start_timestamp, end_frame=end_timestamp) # output len --> 600 frames long\n",
+    "        .output ('C:/Users/KRPTN/Pictures/Camera Roll/WIN_20210330_17_01_17_Pro__'+ str(i) +'.mp4' )\n",
+    "        .run()\n",
+    "    )\n",
+    "    start_timestamp += end_timestamp\n",
+    "    end_timestamp += end_timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "dirs = 'C:/Users/KRPTN/Pictures/Camera Roll/WIN_20210330_17_01_17_Pro.mp4'\n",
+    "#Loop through all the genres\n",
+    "for i, (dirpath, dirnames, filenames) in enumerate(os.walk(dataset_path)):\n",
+    "        \n",
+    "        #ensure that we're not at the root level\n",
+    "    if dirpath not in dataset_path or True:\n",
+    "\n",
+    "            #save the semantic label\n",
+    "        dirpath_components = dirpath.split('/')\n",
+    "        semantic_label = dirpath_components[-1]\n",
+    "        print('\\nProcessing {}'.format(semantic_label))\n",
+    "            \n",
+    "            #process files for a specific genre \n",
+    "        for f in filenames:\n",
+    "            if f.endswith('.mp4') or f.endswith('.MP4'):"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -21909,7 +21968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
