--- a/deprecated/music_recog.ipynb
+++ b/deprecated/music_recog.ipynb
@@ -509,7 +509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
