--- a/sample_script/Untitled.ipynb
+++ b/sample_script/Untitled.ipynb
@@ -16259,7 +16259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -16273,7 +16273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
