--- a/sample_script/Untitled.ipynb
+++ b/sample_script/Untitled.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ../ujicoba\\01 Kristianex _ Roy Orion - Arcane (Extended.wav songs format not supported, skipped\n",
+      "The ../ujicoba\\01 Siks _ Alex Pizzuti - Vibe (Extended Mix).wav songs format not supported, skipped\n"
+     ]
+    }
+   ],
    "source": [
-    "ms = mss.MusicSelectionSystem('../config/mss.json','../../Thesis/Dataset/tesuto')"
+    "ms = mss.MusicSelectionSystem('../config/mss.json','../ujicoba')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../ujicoba\\\\02 Alone (feat. Stefflon Don) [Calvin Harris.mp3'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Get the next music to be played"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ms.getNextMusic(crowd=1)"
+    "ms.getNextMusic()"
    ]
   },
   {
@@ -67,6 +78,13 @@
    "source": [
     "#show all music stored in MSS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
