--- a/sample_script/Untitled.ipynb
+++ b/sample_script/Untitled.ipynb
@@ -34,15 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ../ujicoba\\01 Kristianex _ Roy Orion - Arcane (Extended.wav songs format not supported, skipped\n",
-      "The ../ujicoba\\01 Siks _ Alex Pizzuti - Vibe (Extended Mix).wav songs format not supported, skipped\n"
+      "The ..\\ujicoba\\01 Kristianex _ Roy Orion - Arcane (Extended.wav songs format not supported, skipped\n",
+      "..\\ujicoba\\01 Kristianex _ Roy Orion - Arcane (Extended.wav: (0,)\n",
+      "The ..\\ujicoba\\01 Siks _ Alex Pizzuti - Vibe (Extended Mix).wav songs format not supported, skipped\n",
+      "..\\ujicoba\\01 Siks _ Alex Pizzuti - Vibe (Extended Mix).wav: (0,)\n"
      ]
     }
    ],
@@ -52,22 +54,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../ujicoba\\\\02 Alone (feat. Stefflon Don) [Calvin Harris.mp3'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ms.getNextMusic()"
+    "ms.musicselection.currentSong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms.getNextMusic(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_played = 0\n",
+    "for isi in ms.musicselection.playedSong:\n",
+    "    print(isi)\n",
+    "ms.musicselection.currentEnergy\n",
+    "    \n",
+    "# if ((len(ms.mstorage.getData()['song_dir'])<= count_played) and (ms.musicselection.oneLoop)):\n",
+    "#     print(\"Concert Finished!\")\n",
+    "# len(ms.mstorage.getData()['song_dir']) <= count_played"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidateSongidx = [[] for isi in range(5)]\n",
+    "for index in range(5):\n",
+    "    candidateSongidx[index] = [i for i, x in enumerate(ms.mstorage.getData()['energy']) if (x == index)]\n",
+    "    candidateSongidx[index] = [cddIdx for cddIdx in candidateSongidx[index] if (not(ms.mstorage.getData()['song_dir'][cddIdx] in ms.musicselection.playedSong[index]))]\n",
+    "    print(candidateSongidx[index])\n",
+    "candidateSongidx[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms.musicselection.currentEnergy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidateSongidx = [[] for isi in range(5)]\n",
+    "for index in range(5):\n",
+    "    candidateSongidx[index] = [i for i, x in enumerate(ms.mstorage.getData()['energy']) if (x == index)]\n",
+    "    candidateSongidx[index] = [cddIdx for cddIdx in candidateSongidx[index] if (not(ms.mstorage.getData()['song_dir'][cddIdx] in ms.musicselection.playedSong[ms.musicselection.currentEnergy]))]\n",
+    "for isi in candidateSongidx[0]:\n",
+    "    print(ms.mstorage.getData()['song_dir'][isi])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "availableEnergy = [isi for isi in range(len(candidateSongidx)) if (len(candidateSongidx[isi])>0)]\n",
+    "distAvailableEnergy = [abs(ms.musicselection.currentEnergy-NextEnergy) for NextEnergy in availableEnergy]\n",
+    "availableEnergy[np.argsort(distAvailableEnergy)[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.array(ms.mstorage.getData()['melspectogram'][ms.mstorage.getData()['song_dir'].index('../ujicoba\\\\02 Alone (feat. Stefflon Don) [Calvin Harris.mp3')][0]).shape\n",
+    "np.array(ms.mstorage.getFeature('melspectogram', '../ujicoba\\\\02 Alone (feat. Stefflon Don) [Calvin Harris.mp3')['melspectogram'][0]).shape"
    ]
   },
   {
@@ -84,7 +160,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ms.mstorage.getData()['song_dir']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms.mstorage.getData()['energy']"
+   ]
   },
   {
    "cell_type": "code",
@@ -430,6 +517,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('tmp/pca.pkl', 'rb') as fp:\n",
+    "    banana = pickle.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -449,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
